RESOLVED FIXED268653
[GTK][WPE] Gamepad button 16 not exposed
https://bugs.webkit.org/show_bug.cgi?id=268653
Summary [GTK][WPE] Gamepad button 16 not exposed
Georges Basile Stavracas Neto
Reported 2024-02-02 12:16:35 PST
The libmanette gamepad backend does not report the button 16 (BTN_MODE, e.g. the Playstation button in DualShock 3/4/5). Chromium and Firefox report that correctly.
Attachments
Georges Basile Stavracas Neto
Comment 1 2024-02-02 12:23:58 PST
EWS
Comment 2 2024-02-02 15:55:41 PST
Committed 274022@main (37a85d6c3252): <https://commits.webkit.org/274022@main> Reviewed commits have been landed. Closing PR #23771 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.